--- a/assets/website.css
+++ b/assets/website.css
@@ -2,15 +2,20 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: pink;
 }
+section {
+  display: flex;
+  max-width: 1140px;
+  align-content: center;
+}
 header {
   display: flex;
   justify-content: space-between;
-  padding-left: 100px;
-  padding-right: 50px;
+  padding: 0 100px;
   width: 100%;
   position: fixed;
   background-color: white;
   height: 70px;
+  box-sizing: border-box;
 }
 nav {
   display: flex;
@@ -25,16 +30,15 @@ header a.personal {
   font-weight: 800;
 }
 header a {
-    color: black;
-    font-size: 12px;
-    font-weight: 600;
-    text-decoration: none;
-    padding: 5px;
-  }
-.big {
-  height: 800px;
+  color: black;
+  font-size: 12px;
+  font-weight: 600;
+  text-decoration: none;
+  padding: 5px;
 }
 ul {
-    list-style-type: none;
-    display: flex;
+  list-style-type: none;
+}
+li {
+  display: inline;
 }
