--- a/assets/website.css
+++ b/assets/website.css
@@ -3,20 +3,29 @@ body {
   background-color: pink;
 }
 section {
-  display: flex;
   max-width: 1140px;
   align-content: center;
 }
 header {
-  display: flex;
-  justify-content: space-between;
   padding: 0 100px;
   width: 100%;
   position: fixed;
   background-color: white;
-  height: 70px;
   box-sizing: border-box;
 }
+
+.container {
+  width: 1140px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
+}
+
 nav {
   display: flex;
   align-items: center;
