--- a/assets/website.css
+++ b/assets/website.css
@@ -1,33 +1,27 @@
 body {
   font-family: "Poppins", sans-serif;
-  background-color: pink;
-}
-section {
-  display: flex;
-  max-width: 1140px;
-  align-content: center;
+  background-color: azure;
 }
 header {
-  display: flex;
-  justify-content: space-between;
   padding: 0 100px;
   width: 100%;
   position: fixed;
   background-color: white;
-  height: 70px;
   box-sizing: border-box;
+}
+.container {
+  width: 1140px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+.row {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
 }
 nav {
   display: flex;
   align-items: center;
-}
-i {
-  font-size: 40px;
-  color: skyblue;
-}
-header a.personal {
-  font-size: 20px;
-  font-weight: 800;
 }
 header a {
   color: black;
@@ -41,4 +35,11 @@ ul {
 }
 li {
   display: inline;
+}
+
+li a:hover {
+  color: deepskyblue;
+}
+i:hover {
+  color: deepskyblue;
 }
