--- a/assets/website.css
+++ b/assets/website.css
@@ -1,45 +1,215 @@
-body {
-  font-family: "Poppins", sans-serif;
-  background-color: azure;
-}
-header {
-  padding: 0 100px;
-  width: 100%;
-  position: fixed;
-  background-color: white;
+* {
   box-sizing: border-box;
 }
-.container {
-  width: 1140px;
-  max-width: 100%;
+
+body {
+  font-family: "Poppins", sans-serif;
+  position: relative;
+  padding-top: 70px;
+}
+
+header {
+  background-color: white;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  z-index: 9;
+}
+
+.header_container {
+  max-width: 1140px;
   margin: 0 auto;
-}
-.row {
+  width: 100%;
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   justify-content: space-between;
-  padding: 10px 0;
 }
-nav {
+ul {
+  padding-inline-start: 5px;
+}
+
+ul a {
+  text-decoration: none;
+  color: black;
+}
+
+li {
+  display: inline-block;
+  padding: 10px;
+}
+
+nav > ul > li > a{
+  text-transform: uppercase;
+}
+
+nav a {
+  list-style: none;
+  padding: 0 5px;
+  font-weight: 700;
+  font-size: 12px;
+  /* text-transform: uppercase; */
+}
+
+nav li:hover > a,
+.services_box_item:hover i,
+.services_box_item:hover h4 {
+  color: deepskyblue;
+}
+
+.dropdown_parent {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown_child {
+  display: none;
+  position: absolute;
+  right: 0%;
+  top: 100%;
+  min-width: 120px;
+  background-color: white;
+  box-shadow: 5px 5px 5px grey;
+  z-index: 1;
+}
+
+.dropdown_parent:hover >.dropdown_child {
+  display: block;
+}
+
+.intro {
+  background-color: azure;
+}
+
+.intro_container {
+  max-width: 1140px;
+  margin: 0 auto;
+  width: 100%;
   display: flex;
   align-items: center;
 }
-header a {
-  color: black;
-  font-size: 12px;
-  font-weight: 600;
-  text-decoration: none;
-  padding: 5px;
-}
-ul {
-  list-style-type: none;
-}
-li {
-  display: inline;
+.intro_side {
+  padding: 0 15px;
+  width: 50%;
 }
 
-li a:hover {
-  color: deepskyblue;
+.intro_side h1,
+h2,
+h6 {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 14px;
+  color: black;
 }
-i:hover {
-  color: deepskyblue;
+.intro_side h1 {
+  margin: 10px 0;
+  font-size: 60px;
+}
+.intro_side h2 {
+  margin: 10px 0;
+  font-size: 36px;
+}
+
+.intro p,
+.about p,
+.services p {
+  color: #777777;
+  line-height: 1.5;
+}
+
+.intro_button {
+  text-transform: uppercase;
+  font-size: 14px;
+  background: deepskyblue;
+  padding: 15px 30px;
+  border: none;
+  color: white;
+  display: inline-block;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.intro_side .intro_button:hover {
+  box-shadow: 20px 20px 20px grey;
+}
+
+.intro_image {
+  line-height: 0;
+}
+
+.intro_image img {
+  max-width: 100%;
+}
+
+.about {
+  padding: 100px 0;
+}
+
+.services {
+  padding-bottom: 100px;
+}
+
+.services_container {
+  max-width: 1140px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.services_box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.services_box_top {
+  max-width: 58%;
+  text-align: center;
+}
+
+.services h3,
+h4 {
+  font-size: 36px;
+  font-weight: 700;
+  color: black;
+}
+
+.services h4 {
+  font-size: 18px;
+}
+
+.services_box_item {
+  position: relative;
+  width: 33%;
+  padding: 0 30px;
+  text-align: center;
+  margin-top: 60px;
+}
+
+.services_icon {
+  font-size: 40px;
+  color: black;
+}
+
+.services a {
+  text-decoration: none;
+  color: black;
+}
+
+.credit {
+  padding: 100px 0;
+  background-color: deepskyblue;
+}
+.credit_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.credit_item {
+  max-width: 100%;
+}
+.credit_item h1,
+.credit_item p {
+  text-align: center;
+  color: white;
 }
